# nx-microcontroller

./: .dockerignore  .gitignore  CLAUDE.md  README.md
controller-relay/: CompanionAppManager.cs  Configuration.cs  ControllerState.cs  FocusTracker.cs  IControllerInput.cs  IControllerTransport.cs  LPUtf8StrMarshaler.cs  MacroFormat.cs  MacroParser.cs  MacroSystem.cs  MacroWriter.cs  MainForm.cs  NativeTransport.cs  PABotBaseTransport.cs  PacketBuilder.cs  Program.cs  README.md  RelaySession.cs  SDL2.cs  SdlControllerInput.cs  SerialConnection.cs  SwitchControllerConstants.cs  WindowsNative.cs  XInputControllerInput.cs  controller-relay.config.example  controller-relay.csproj
firmware/: .gitignore  Descriptors.c  Descriptors.h  EmulatedSPI.h  Joystick.c  JoystickStandalone.c  Makefile  README.md  Response.c  STANDALONE_MACRO_BUILD.md  STANDALONE_QUICK_REFERENCE.md  avr.h  macro.json  macro.macro  macro_to_c.py
firmware/avr/: EmulatedSPI.c  Joystick.h  JoystickStandalone.c  Makefile  Response.h  avr.h  build_standalone.sh
firmware/esp32s3/: CMakeLists.txt  README.md  build_standalone.sh  sdkconfig.defaults
firmware/esp32s3/main/: CMakeLists.txt  idf_component.yml  main.c  tusb_config.h  usb_descriptors.c  usb_descriptors.h
firmware/pico/: CMakeLists.txt  README.md  build_standalone.sh  main.c  tusb_config.h  usb_descriptors.c
firmware/shared/: datatypes.h  emulated_spi.c  emulated_spi.h  macro_player.c  macro_player.h  switch_report.h  switch_responses.c  switch_responses.h
macros/legends-za/bench/: default.macro
macros/legends-za/bench-loop/: README.md  bench-loop.macro
macros/legends-za/fast-travel/: README.md  lumiose-city.macro  tower-of-mastery.macro  wild-zone-01.macro  wild-zone-02.macro  wild-zone-03.macro  wild-zone-04.macro  (+16 more)
site/: .dockerignore  .prettierrc  Dockerfile  README.md  astro.config.mjs  eslint.config.js  fly.toml  package-lock.json  package.json
(+27 files in other folders)
